# pyha-template

./: .cursorrules  .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  404.html  AGENTS.md  AI-README.md  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT_HEADER.md  IMPLEMENTATION-SUMMARY.md  LICENSE  LICENSE-AI-NOTICE.md  Makefile  README.md  TEMPLATE-USAGE.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.agents/skills/ai-friendly-development/: SKILL.md
.agents/skills/ai-friendly-development/agents/: openai.yaml
.agents/skills/ai-friendly-development/references/: ai-friendly-development-workflow.md  portable-engineering-patterns.md
.agents/skills/commit-readiness/: SKILL.md
.agents/skills/commit-readiness/agents/: openai.yaml
.agents/skills/commit-readiness/references/: commit-readiness-workflow.md
.agents/skills/documentation-update/: SKILL.md
.agents/skills/documentation-update/agents/: openai.yaml
.agents/skills/documentation-update/references/: documentation-update-workflow.md
.agents/skills/license-audit/: SKILL.md
.agents/skills/license-audit/agents/: openai.yaml
.agents/skills/license-audit/references/: license-audit-workflow.md
.agents/skills/license-audit/scripts/: generate_review_decisions_markdown.py  license_audit_dependencies.py  license_audit_headers.py  run_license_audit.sh  summarize_license_audit.py
.agents/skills/release-preparation/: SKILL.md
.agents/skills/release-preparation/agents/: openai.yaml
.agents/skills/release-preparation/references/: release-preparation-workflow.md
.claude/skills/: ai-friendly-development  commit-readiness  license-audit  release-preparation
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/agents/: hawrylik.commit.agent.md  hawrylik.dev.agent.md  hawrylik.docs.agent.md  hawrylik.licence-audit.agent.md  hawrylik.push.agent.md  hawrylik.release.agent.md
.github/prompts/: hawrylik.commit.prompt.md  hawrylik.docs.prompt.md  hawrylik.licence-audit.prompt.md  hawrylik.modify_core.prompt.md
.github/workflows/: ci.yml  docs.yml  release.yml
api/core/: index.html
api/utils/: index.html
architecture/roadmap/: index.html
changelog/: index.html
configs/: README.md
contributing/: index.html
data/: README.md
data/processed/: README.md
data/raw/: README.md
development/: license-review-decisions.csv
development/_constitution/: index.html
development/_constitution_template/: index.html
development/license-audit/: index.html
development/license-compliance/: index.html
development/license-review-decisions/: index.html
development/mkdocs/: index.html
docs/: api.md  changelog.md  contributing.md  index.md  license.md  reference.md
docs/api/: core.md  utils.md
docs/architecture/: roadmap.md
docs/development/: _constitution.md  agents.md  ai-development.md  license-audit.md  license-compliance.md  license-review-decisions.md  mkdocs.md
docs/guide/: best-practices.md  configuration.md  installation.md  quickstart.md  template-usage.md
guide/best-practices/: index.html
guide/configuration/: index.html
guide/installation/: index.html
guide/quickstart/: index.html
guide/template-usage/: index.html
license/: index.html
notebooks/: README.md
scripts/: README.md  check_agents.py  check_agents.sh  check_agents_md.py  customize_template.py  example_script.py  license_audit_dependencies.py  license_audit_headers.py
search/: search_index.json
src/python_library_template/: __init__.py  core.py  greeter.py
src/your_package_name/: __init__.py  core.py  utils.py
tests/: __init__.py  test_core.py  test_license_audit_scripts.py  test_utils.py
tests/end_to_end/: test_package_import.py  test_smoke.py
tests/unit/: test_core.py  test_greet.py  test_greeter.py
