[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your-package-name"
version = "0.1.0"
description = "A modern Python library template optimized for agentic and data-driven development"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
authors = [
    { name = "Wiktor Hawrylik", email = "wiktor.hawrylik@gmail.com" }
]
maintainers = [
    { name = "Wiktor Hawrylik", email = "wiktor.hawrylik@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    # Core dependencies - adjust based on your needs
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.8.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "ipython>=8.0.0",
]

# Documentation dependencies
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mike>=2.0.0",
]

# Testing dependencies
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-mock>=3.11.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.80.0",
]

# Data science dependencies (for data-driven development)
data = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "notebook>=7.0.0",
]

# AI/ML dependencies (for agentic development)
ai = [
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    "langchain>=0.1.0",
    "tiktoken>=0.5.0",
]

# All dependencies for complete development environment
all = [
    # Expanded to avoid circular dependency
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.8.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "ipython>=8.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mike>=2.0.0",
    "hypothesis>=6.80.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "notebook>=7.0.0",
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    "langchain>=0.1.0",
    "tiktoken>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/WiktorHawrylik/your-package-name"
Repository = "https://github.com/WiktorHawrylik/your-package-name"
Documentation = "https://WiktorHawrylik.github.io/your-package-name/"
"Bug Tracker" = "https://github.com/WiktorHawrylik/your-package-name/issues"

[project.scripts]
# Add CLI scripts here if needed
# your-package-cli = "your_package_name.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["your_package_name*"]

[tool.setuptools.package-data]
your_package_name = ["py.typed"]

[tool.setuptools.package-dir]
"" = "src"

# Ruff configuration - Single source of truth for code quality
[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".tox",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    ".pytest_cache",
    "__pycache__",
    "data",
    "notebooks",
]

[tool.ruff.lint]
# Enable comprehensive linting rules for high code quality
# E/W: pycodestyle errors and warnings
# F: Pyflakes
# I: isort (import sorting)
# N: pep8-naming
# D: pydocstyle (documentation)
# UP: pyupgrade (modern Python syntax)
# ANN: flake8-annotations
# S: flake8-bandit (security)
# B: flake8-bugbear (bug detection)
# A: flake8-builtins
# C4: flake8-comprehensions
# T20: flake8-print (no print statements)
# RET: flake8-return
# SIM: flake8-simplify
# ARG: flake8-unused-arguments
# PTH: flake8-use-pathlib
# ERA: eradicate (commented-out code)
# PL: Pylint
# RUF: Ruff-specific rules
select = [
    "E", "W",  # pycodestyle
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP",  # pyupgrade
    "S",  # bandit
    "B",  # bugbear
    "A",  # builtins
    "C4",  # comprehensions
    "RET",  # return
    "SIM",  # simplify
    "ARG",  # unused arguments
    "PTH",  # use pathlib
    "ERA",  # eradicate
    "PL",  # pylint
    "RUF",  # ruff-specific
]

# Ignore specific rules that might be too strict for your use case
ignore = [
    "E203",  # whitespace before ':'
    "S101",  # use of assert (needed for tests)
    "PLR0913",  # too many arguments
]

# Max cyclomatic complexity
mccabe.max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]  # Allow unused imports and missing package docstrings in __init__ files
"tests/**/*.py" = ["S101", "ARG", "PLR2004", "D"]  # Allow asserts, unused args, magic values, no docstrings in tests

[tool.ruff.lint.pydocstyle]
convention = "google"  # Use Google-style docstrings

[tool.ruff.lint.isort]
known-first-party = ["your_package_name"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Use Black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# mypy configuration - Strict type checking for better code quality
[tool.mypy]
python_version = "3.11"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true
exclude = "(?x)(\n    ^\\.venv/\n    | ^venv/\n    | ^\\.eggs/\n    | ^build/\n    | ^dist/\n    | ^\\.mypy_cache/\n    | ^\\.pytest_cache/\n    | ^__pycache__/\n    | ^data/\n    | ^notebooks/\n)"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "pytest.*",
    "_pytest.*",
]
ignore_missing_imports = true
ignore_errors = true

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=your_package_name",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "-ra",  # Show summary of all test outcomes
    "--tb=short",  # Shorter traceback format
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "data: marks tests that require data files",
    "ai: marks tests that require AI/LLM services",
]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING:",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
