[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your-package-name"
version = "0.1.0"
description = "Python application supporting data-driven, agentic development"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]
license = {text = "AGPL-3.0-or-later"}
authors = [
    { name = "Wiktor Hawrylik", email = "wiktor.hawrylik@gmail.com" }
]
maintainers = [
    { name = "Wiktor Hawrylik", email = "wiktor.hawrylik@gmail.com" }
]
keywords = [
  "python",
  "template",
  "software-engineering",
  "data-engineering",
  "data-science"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.80.0",
    "mypy>=1.5.0",
    "pip-licenses>=5.5.1",
    "pre-commit>=3.3.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.3.0",
    "ruff>=0.8.0",
]
docs = [
  "mike>=2.0.0",
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.25.0",
]
all = ["your-package-name[dev,docs]"]

[project.urls]
Homepage = "https://github.com/WiktorHawrylik/your-package-name"
Repository = "https://github.com/WiktorHawrylik/your-package-name"
Documentation = "https://WiktorHawrylik.github.io/your-package-name/"
"Bug Tracker" = "https://github.com/WiktorHawrylik/your-package-name/issues"

[project.scripts]
# Example
# your-package-cli = "your_package_name.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["your_package_name*"]

[tool.setuptools.package-data]
your_package_name = ["py.typed"]


# -------------------------------
# --- Code quality and style ----
# -------------------------------

# Ruff configuration - Single source of truth for code quality
[tool.ruff]
line-length = 120
target-version = "py39"
src = ["src", "tests"]
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "build",
  "dist",
  "htmlcov",
  "site",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors (syntax/style violations)
    "W",    # pycodestyle warnings (layout, indentation, line-break and whitespace conventions)
    "F",    # Pyflakes: undefined names and logical mistakes
    "I",    # isort: deterministic import grouping and ordering
    "N",    # pep8-naming: naming convention enforcement
    "UP",   # pyupgrade: modern Python syntax and APIs
    "S",    # Bandit: common security anti-patterns
    "B",    # bugbear: likely bugs and risky constructs
    "A",    # flake8-builtins: prevent shadowing Python built-ins
    "C4",   # flake8-comprehensions: cleaner/faster comprehension patterns
    "RET",  # flake8-return: consistent and explicit return behavior
    "SIM",  # flake8-simplify: reduce redundant/complex logic
    "ARG",  # flake8-unused-arguments: detect unused function args
    "PTH",  # flake8-use-pathlib: prefer pathlib over os.path
    "ERA",  # eradicate: detect commented-out code
    "PL",   # Pylint-derived quality checks
    "RUF",  # Ruff-native diagnostics and autofix rules
    "D",    # pydocstyle: enables docstring lint checks
    "C90",  # mccabe: enables max complexity enforcement
]
ignore = [
    "PLR0913",  # allow function with many args in data workflows
]
mccabe.max-complexity = 10 # limit complexity score per function

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]  # Allow unused imports and missing package docstrings in __init__ files
"tests/**/*.py" = ["S101", "ARG", "PLR2004", "D"]  # Allow asserts, unused args, magic values, no docstrings in tests

# Use Black-compatible formatting
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true


# -------------------------------
# --- Typing (static) -----------
# -------------------------------

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
warn_unused_configs = true
pretty = true
show_error_codes = true
show_column_numbers = true
exclude = '(?x)(^build/|^dist/|^\.venv/|^site/|^htmlcov/)'

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false


# -------------------------------
# --- Testing -------------------
# -------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "--cov=your_package_name",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
  "--tb=short",
  "-ra",
]
markers = [
  "unit: fast isolated tests",
  "integration: tests for component collaboration",
  "data: tests that validate data contracts or transformations",
  "slow: long-running tests",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
precision = 2
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"


# -------------------------------
# --- Documentation -------------
# -------------------------------

[tool.ruff.lint.pydocstyle]
convention = "google"  # Use Google-style docstrings

[tool.markdownlint]
default = true
MD029 = false
MD036 = false
MD040 = false

[tool.markdownlint.MD013]
line_length = 200
code_blocks = false
tables = false

[tool.markdownlint.MD024]
siblings_only = true
